--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,8 @@ __pycache__
 venv*
 .direnv
 
+# Ignore firebase credentials folder
+services/stock_league/app/firebase_credentials
+
 # Jupyter Notebook
 .ipynb_checkpoints
